Fixed spacing

--- a/frontend/src/assets/global.scss
+++ b/frontend/src/assets/global.scss
@@ -66,7 +66,6 @@ html, body {
     background: #333;
     border-radius: 0.5rem;
     outline: none;
-    margin-top: 1rem;
     display: flex;
     align-items: center;
     flex-flow: row;
